fix scrollbar gutter layout shift

--- a/src/app.css
+++ b/src/app.css
@@ -15,3 +15,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  scrollbar-gutter: stable;
+}
